# rush

./: .goreleaser.yaml  Cargo.toml  LICENSE  README.md  gor.yaml
src/: main.rs  shell.rs
