[package]
name = "rush"
description = "A 'beagleful' editor written in Rust"
repository = "https://github.com/beaglesoftware/rushr"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
dirs = "6.0.0"
mathcalculate = "0.1.2"
miette = { version = "7.5.0", features = ["fancy"] }
reedline = "0.39.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
